bitfield/tests/11-bits-attribute-wrong.stderr
error[E0080]: evaluation of constant value failed
  --> tests/11-bits-attribute-wrong.rs:11:7
   |
11 |     #[bits = 9]
   |       ^^^^ the evaluated program panicked at 'mismatch between bits of field `trigger_mode: TriggerMode` and #[bits = 9]', $DIR/tests/11-bits-attribute-wrong.rs:11:7
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::std::panic` (in Nightly builds, run with -Z macro-backtrace for more info)
